--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Display Note</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>My Website</title>
+  <link rel="stylesheet" href="site.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Your Note</h1>
-    <div class="note-box">
-      <p id="note">This is your important note! Edit it as you like.</p>
-      <textarea id="edit-note" class="hidden" placeholder="Edit your note..."></textarea>
-      <button id="edit-btn">Edit Note</button>
-      <button id="save-btn" class="hidden">Save Note</button>
-    </div>
+  <!-- Loading Spinner -->
+  <div id="loader">
+    <div class="spinner"></div>
   </div>
-  <script src="script.js"></script>
+
+  <!-- Your Content -->
+  <div class="content">
+    <h1>Welcome to My Website</h1>
+    <p>This is a beautiful opening animation!</p>
+  </div>
+
+  <script src="site.js"></script>
 </body>
 </html>
