--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ So This was just a small letter (aaah is this a letter bruh?) abt how special r 
 
 
 I think its kinda cringe 💀sry if it made u cringe 😹💀. I won't do like this ever again 😹. Happy bday precioussss againnn 😩❤️❤️❤️<br><br>
-      
 
-
+<br><br>
+Thanku for being special :) 
 
 By Sechi. 
     </p>
